tests/toylang/neg/001124_mutation.toylang
program a = { if if a then sleep; } .
